<?xml version="1.0"?>
<package format="3">
  <name>ctd_system</name>
  <version>0.0.1</version>
  <description>CTD system nodes in Python</description>
  <maintainer email="mikolaj@example.com">mikolaj</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>ctd_interfaces</depend>

  <exec_depend>python3-flask</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
